# book-writing-buddy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MCP_SETUP.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  SKILLS-TO-CREATE.md  STRUCTURE.md  analyze_chapter.py  config.json  config.schema.json  diagnose_zotero.py  docker-compose.yml  docker-entrypoint.sh  inspect_qdrant.py  inspect_zotero.py  main.py  pyproject.toml  requirements.txt  run-cli.sh
.claude/: claude.md  config.json  mcp.json
config/: default.json
config/skills/: README.md  analyze_chapter.md  check_sync_workflow.md  deep_chapter_analysis.md  export_research.md  manuscript_review.md  research_gaps.md  research_timeline.md  source_quality_check.md  track_theme.md
conversations/: conversation_20251218_144259.json  conversation_20251218_231257.json  conversation_20251218_234824.json  conversation_20251220_163454.json  conversation_20251220_163734.json  conversation_20251220_234846.json
data/: outline.example.txt
docs/: API.md  ARCHITECTURE_V2.md  EMBEDDING_MODEL.md  MIGRATION_COMPLETE.md  OFFLINE_SETUP.md  REINDEXING.md  SDK_MIGRATION_ASSESSMENT.md  SDK_MIGRATION_COMPLETE.md  SYNC_AND_SEARCH_FIXES.md  TESTING.md  WORKFLOW_FIXES.md
output/: .gitkeep
scripts/: diagnose_zotero.py  download_model.py  inspect_qdrant.py  inspect_zotero.py  quick_test_refactor.py  reindex.py  setup.py  test_agent_config.py  test_all.py  test_cli_status.py  test_forced_offline.py  test_mcp_tools.py  test_offline_fallback.py  test_refactored_agent.py  test_skill_loader.py
src/: agent.py  agent_v2.py  cli.py  mcp_server.old.py  mcp_server.py  nodes.py  rag.py  scrivener_parser.py  skill_loader.py  state.py  sync_checker.py  theme.py  tools.py  workflows.py
src/cli/: __init__.py  agent_wrapper.py  (+3 more)
tests/: test_context_loading.py  test_rag_new_methods.py  test_scrivener_parser.py  test_sync_checker.py
(+30 files in other folders)
