[project]
name = "book-writing-buddy"
version = "0.1.0"
description = "Research assistant for book writers using Zotero and Scrivener"
requires-python = ">=3.11"
dependencies = [
    "pick>=2.2.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "structlog>=23.1.0",
    "watchdog>=3.0.0",
    "pypdf>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "striprtf>=0.0.26",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "rich>=14.2.0",
    "python-dotenv>=1.2.1",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
