[project]
name = "book-writing-buddy"
version = "0.1.0"
description = "Research assistant for book writers using Zotero and Scrivener"
requires-python = ">=3.11"
dependencies = [
    "pick>=2.2.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "structlog>=23.1.0",
    "watchdog>=3.0.0",
    "pypdf>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "striprtf>=0.0.26",
    "rich>=14.2.0",
    "python-dotenv>=1.2.1",
    "claude-agent-sdk>=0.1.19",
    "anthropic>=0.75.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# Ignore line length errors (E501) - enforced by formatter
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
